--- a/product/templates/product/product-detail.html
+++ b/product/templates/product/product-detail.html
@@ -21,19 +21,9 @@
                       </svg>
                     </span>
                   </li>
-                  <li class="flex items-center gap-x-2">
-                    <a href="#" class="text-sm text-text/90 hover: hover:">
-                      مردانه
-                    </a>
-                    <span class="text-text/90">
-                      <svg class="h-5 w-5">
-                        <use xlink:href="#chevron-left" />
-                      </svg>
-                    </span>
-                  </li>
                   <li>
                     <a href="#" class="text-sm text-text/90 hover: hover:">
-                      کتونی مردانه
+                        {{ product.category.last }}
                     </a>
                   </li>
                 </ol>
@@ -49,11 +39,19 @@
                       <div class="flex items-center gap-x-4">
                         <!-- add to favorite -->
                         <div>
+                        <a href="{% url 'product:product_like' product.slug %}">
                           <button data-tooltip-target="add-to-favorite" type="button">
-                            <svg class="h-6 w-6">
-                              <use xlink:href="#heart" />
-                            </svg>
+                              {% if product.likes.last %}
+                              	<svg class="h-6 w-6 text-red-500">
+                                  <use xlink:href="#heart" />
+                                </svg>
+                              {% else %}
+                              	<svg class="h-6 w-6">
+                                  <use xlink:href="#heart" />
+                                </svg>
+                              {% endif %}
                           </button>
+                        </a>
                           <div
                             id="add-to-favorite"
                             role="tooltip"
@@ -102,7 +100,7 @@
                               <li>
                                 <button
                                   type="button"
-                                  data-link="https://www.google.com"
+                                  data-link="http://127.0.0.1:8000/product/{{ product.slug }}"
                                   onclick="copyToClipboardSocialShareDesktop(this)"
                                   class="flex w-full items-center justify-between rounded-lg px-4 py-3 text-sky-500 hover:bg-sky-500/10 dark:text-sky-400 dark:hover:bg-sky-400/10"
                                 >
@@ -705,7 +703,7 @@
                       <!-- Desktop Comments -->
                       <div class="hidden md:block">
                         <ul class="mb-8 space-y-4 divide-y divide-gray-200 dark:divide-white/10">
-                          {% for comment in product.comments.all %}
+                        {% for comment in product.comments.all %}
                           <li class="space-y-2">
                             <div class="py-6">
                               <div class="flex items-center justify-between gap-2">
@@ -752,45 +750,11 @@
                         {% endfor %}
                         </ul>
                         <!-- Pagination -->
-                      {% if product.comments > 6 %}
-                      	<div class="flex items-center justify-center gap-x-4 md:justify-end">
-                          <!-- Previous page-->
-                          <a class="pagination-button flex items-center justify-center" href="#">
-                            <svg class="h-6 w-6">
-                              <use xlink:href="#chevron-right"></use>
-                            </svg>
-                          </a>
-                          <!-- Pages -->
-                          <div class="flex items-center gap-x-2">
-                            <a class="pagination-button pagination-button-active" href="#">
-                              1
-                            </a>
-                            <p class="text-sm text-text/60">...</p>
-
-                            <a class="pagination-button" href="#"> 3 </a>
-                            <a class="pagination-button" href="#"> 4 </a>
-
-                            <p class="text-sm text-text/60">...</p>
-
-                            <a class="pagination-button" href="#"> 10 </a>
-                          </div>
-                          <!-- Next page-->
-                          <a
-                            class="flex h-8 w-8 items-center justify-center rounded-full bg-muted transition-all duration-200 hover:bg-primary hover:text-white hover:dark:bg-emerald-600"
-                            href="#"
-                          >
-                            <svg class="h-6 w-6">
-                              <use xlink:href="#chevron-left"></use>
-                            </svg>
-                          </a>
-                        </div>
-                      {% endif %}
                       </div>
                     </div>
                   </div>
                 </div>
-                {% if product.comments > 6 %}
-                  <div class="hidden justify-center md:flex">
+                <div class="hidden justify-center md:flex">
                   <button class="btn-secondary-nobg" id="toggleCommentsButton">
                     مشاهده بیشتر
                     <svg class="h-5 w-5">
@@ -798,7 +762,6 @@
                     </svg>
                   </button>
                 </div>
-                {% endif %}
               </div>
             </div>
           </div>
