Fix title in template

--- a/account/templates/account/forget.html
+++ b/account/templates/account/forget.html
@@ -1,5 +1,8 @@
 {% extends 'login-base.html' %}
 {% load static %}
+{% block title %}
+	فراموشی رمز عبور
+{% endblock %}
 {% block main %}
 	<div class="flex min-h-screen items-center justify-center bg-background">
       <div class="container">
