--- a/cart/templates/cart/checkout-payment.html
+++ b/cart/templates/cart/checkout-payment.html
@@ -1,6 +1,9 @@
 {% extends 'cart-base.html' %}
 {% load static %}
 {% load humanize %}
+{% block title %}
+	سبد خرید
+{% endblock %}
 {% block main %}
 	<main class="flex-grow bg-background pb-14 pt-36 xs:pt-36">
         <div class="container">
