--- a/core/templates/core/faq.html
+++ b/core/templates/core/faq.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+	سوالات
+{% endblock %}
 {% block contact %}
 	<main class="flex-grow bg-background pb-14 pt-36 xs:pt-36">
         <div class="container rounded-lg bg-muted p-5">
