--- a/core/templates/core/how-to-buy.html
+++ b/core/templates/core/how-to-buy.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+	راهنمای خرید
+{% endblock %}
 {% block contact %}
 	<main class="flex-grow bg-background pb-14 pt-36 xs:pt-36">
         <div class="container rounded-lg bg-muted p-5">
