--- a/templates/cart-base.html
+++ b/templates/cart-base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>پیشخوان</title>
+    <title>{% block title %}  {% endblock %}</title>
 
     <link href="{% static 'main/assets/css/fonts.css' %}" rel="stylesheet" />
     <link href="{% static 'main/assets/css/dependencies/swiper.min.css' %}" rel="stylesheet" />
