--- a/account/templates/account/check-username.html
+++ b/account/templates/account/check-username.html
@@ -1,5 +1,8 @@
 {% extends 'login-base.html' %}
 {% load static %}
+{% block title %}
+	ورود | ثبت نام
+{% endblock %}
 {% block main %}
 	<div class="flex min-h-screen items-center justify-center bg-background">
       <div class="container">
