--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+	صفحه اصلی
+{% endblock %}
 {% block contact %}
     <div class="fixed inset-x-0 top-1/3 mx-auto h-1/3 w-1/4 bg-primary/50 blur-[200px]"></div>
 	<main class="flex-grow bg-background pb-14 pt-36 xs:pt-36">
