--- a/templates/login-base.html
+++ b/templates/login-base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>ورود / ثبت نام</title>
+    <title>{% block title %}  {% endblock %}</title>
 
     <link href="{% static 'main/assets/css/fonts.css' %}" rel="stylesheet" />
     <link href="{% static 'main/assets/css/app.css' %}" rel="stylesheet" />
