--- a/user_profile/templates/user_profile/order.html
+++ b/user_profile/templates/user_profile/order.html
@@ -1,5 +1,8 @@
 {% extends 'user-profile-base.html' %}
 {% load static %}
+{% block title %}
+	سفارش ها
+{% endblock %}
 {% block main %}
 	<div class="col-span-12 lg:col-span-9">
               <div class="rounded-lg bg-muted p-5 shadow-base">
